--- a/music.html
+++ b/music.html
@@ -46,8 +46,18 @@
             </ul>
 
             <div class="row" style="margin-top: 14px">
-              <a class="btn primary" href="https://open.spotify.com/playlist/5bAq1K4cvcDhXSBwAOg5rn?si=ZRaKmm9hTAinEdknXkULfg&pi=gzT6FBJSSrWzX" target="_blank" rel="noreferrer">Open playlist</a>
-              <button class="btn ghost" id="shuffleBtn" type="button">Shuffle titles</button>
+              <!-- edit this playlist link -->
+              <a class="btn primary" id="playlistBtn" href="https://www.youtube.com" target="_blank" rel="noreferrer">
+                Open playlist
+              </a>
+              <button class="btn ghost" id="shuffleBtn" type="button">
+                Shuffle titles
+              </button>
+            </div>
+
+            <div class="row" style="margin-top: 14px">
+              <a class="btn ghost" href="./index.html">Back to game</a>
+              <a class="btn ghost" href="./letter.html">Go to letter</a>
             </div>
           </div>
 
@@ -61,11 +71,6 @@
             <div class="quote">
               “Happy Birthday. I adore you. Now suffer.”
               <span class="muted">— Mansi</span>
-            </div>
-
-            <div class="row" style="margin-top: 14px">
-              <a class="btn ghost" href="./index.html">Back to game</a>
-              <a class="btn ghost" href="./letter.html">Go to letter</a>
             </div>
           </div>
         </div>
