--- a/music.html
+++ b/music.html
@@ -45,12 +45,20 @@
               <li><span class="song">Song 5</span> <span class="note">— edit later</span></li>
             </ul>
 
-            <div class="row" style="margin-top:14px">
-              <a class="btn primary" href="https://www.youtube.com" target="_blank" rel="noreferrer">Open playlist</a>
+            <div class="row" style="margin-top: 16px">
+              <a
+                class="btn primary"
+                href="https://open.spotify.com/playlist/5bAq1K4cvcDhXSBwAOg5rn?si=TtfjSFG5SwuSdRre1MtYFw"
+                target="_blank"
+                rel="noreferrer"
+              >
+                Open playlist
+              </a>
+
               <button class="btn ghost" id="shuffleBtn" type="button">Shuffle</button>
             </div>
 
-            <div class="row" style="margin-top:14px">
+            <div class="row" style="margin-top: 14px">
               <a class="btn ghost" href="./letter.html">Back to letter</a>
               <a class="btn ghost" href="./index.html">Back to game</a>
             </div>
