--- a/music.html
+++ b/music.html
@@ -38,11 +38,12 @@
             <h3>My picks</h3>
 
             <ul class="songs" id="songsList">
-              <li><span class="song">Song 1</span> <span class="note">— this is so you</span></li>
-              <li><span class="song">Song 2</span> <span class="note">— main character energy</span></li>
-              <li><span class="song">Song 3</span> <span class="note">— your mood swings:P</span></li>
-              <li><span class="song">Song 4</span> <span class="note">— soft & sweet</span></li>
-              <li><span class="song">Song 5</span> <span class="note">— okay fine i miss you</span></li>
+              <li><span class="song">blue boy</span> <span class="note">— this is so you</span></li>
+              <li><span class="song">It almost worked</span> <span class="note">— main character energy</span></li>
+               <li><span class="song">afterglow</span> <span class="note">— makes me think of you</span></li>
+              <li><span class="song">kabhi khushi kabhie gham</span> <span class="note">— your mood swings:P</span></li>
+              <li><span class="song">every breath you take</span> <span class="note">— soft & sweet</span></li>
+              <li><span class="song">o soneya</span> <span class="note">— okay fine i miss you</span></li>
             </ul>
 
             <div class="row" style="margin-top: 16px">
